add one more translation

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -62,6 +62,7 @@ en:
       manner. For him to win <strong>WE</strong> will need to share Andrew’s
       vision with as many people as we can.
   what:
+    header: What can I do?
     a:
       title: Donate to Yang
       text: Donate to Yang - every little bit helps
