--- a/locales/es.yml
+++ b/locales/es.yml
@@ -66,9 +66,10 @@ es:
       manera justa. Para que gane NOSOTROS necesitaremos compartir la visión de
       Andrew con toda las personas que podamos.
   what:
+    header: ¿Qué puedo hacer?
     a:
-      title: Donate to Yang
-      text: Donate to Yang - every little bit helps
+      title: Dona a Yang
+      text: Dona a Yang- cada dólar ayuda
     b:
       title: Ayuda en Iowa
       text: Participa en Iowa
