Change top video to CNN town hall

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -36,7 +36,7 @@ en:
   learn:
     header: Learn about Andrew Yang's Policies
   video:
-    iowa_press: Interview on Iowa Press PBS
+    top: Town Hall on CNN
     iowa_speech: Iowa Democratic Party Liberty and Justice Speech
     iowa_register: Andrew Yang meets with the Register's editorial board
   debates:
