--- a/locales/es.yml
+++ b/locales/es.yml
@@ -39,7 +39,7 @@ es:
   learn:
     header: Aprenda sobre las politicas de Andrew Yang
   video:
-    iowa_press: Univision Noticias
+    top: Reunión de Ayuntamiento de CNN
     iowa_speech: Discurso de Libertad y Justicia del Partido Demócrata de Iowa
     iowa_register: Andrew Yang se reúne con el consejo editorial del Registro de Des Moines
   debates:
