Use CNN for top video and keep iowa press video

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -37,6 +37,7 @@ en:
     header: Learn about Andrew Yang's Policies
   video:
     top: Town Hall on CNN
+    iowa_press: Interview on Iowa Press PBS
     iowa_speech: Iowa Democratic Party Liberty and Justice Speech
     iowa_register: Andrew Yang meets with the Register's editorial board
   debates:
