--- a/locales/es.yml
+++ b/locales/es.yml
@@ -39,7 +39,8 @@ es:
   learn:
     header: Aprenda sobre las politicas de Andrew Yang
   video:
-    top: Reunión de Ayuntamiento de CNN
+    top: Town Hall on CNN
+    iowa_press: Univision Noticias
     iowa_speech: Discurso de Libertad y Justicia del Partido Demócrata de Iowa
     iowa_register: Andrew Yang se reúne con el consejo editorial del Registro de Des Moines
   debates:
