--- a/locales/en.yml
+++ b/locales/en.yml
@@ -99,7 +99,7 @@ en:
       Built by @EricCurtis, @thedeeno, @wayside5
     feedback: Tweet at us with any suggestions, questions, or comments.
     pdf: |
-      Click here to download a PDF file for a business card pointing users to
+      Click here to download a PDF file of a business card pointing users to
       this site.
     cards: |
       Business card design with a link to this site
