Remove campaing specifc text

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -17,7 +17,7 @@ en:
       title="Link to Andrew Yang Policies">150+ policies</a>, would transform
       towns across America by giving every adult $1,000/mo.
     img:
-      alt: Freedom Diviend for Des Moines Iowa
+      alt: Freedom Diviend for Manchester, NH
     impact: |
       See how this would impact your community at
       <a
