--- a/locales/es.yml
+++ b/locales/es.yml
@@ -19,7 +19,7 @@ es:
       de Andrew Yang">150 políticas</a> que transformaría las ciudades de todo
       Estados Unidos al otorgar a cada adulto $ 1,000 al mes.
     img:
-      alt: Freedom Diviend for Des Moines Iowa
+      alt: Freedom Diviend for Manchester, NH
     impact: |
       Vea cómo mil dolares afectaría a su comunidad
       <a
@@ -101,8 +101,7 @@ es:
   social:
     header: Redes sociales de Andrew Yang
   footer:
-    contributors:
-      Construido por @EricCurtis, @thedeeno, @wayside5
+    contributors: Construido por @EricCurtis, @thedeeno, @wayside5
     feedback: tuitearnos con cualquier sugerencia, pregunta o comentario.
     pdf: |
       Haz click aquí para descargar PDF para imprimir tarjetas para empujar
